Issue 15234 - [Version 2.0] CanClose and CanHide not works right on LayoutAnchorable
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@102123 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/Xceed.Wpf.AvalonDock/Properties/Resources.it.resx
+++ b/Xceed.Wpf.AvalonDock/Properties/Resources.it.resx
@@ -139,7 +139,7 @@
     <value>Finestra Mobile</value>
   </data>
   <data name="Anchorable_Hide" xml:space="preserve">
-    <value>Chiudi</value>
+    <value>Nascondi</value>
   </data>
   <data name="Document_Close" xml:space="preserve">
     <value>Chiudi</value>
