--- a/Xceed.Wpf.AvalonDock/Properties/Resources.resx
+++ b/Xceed.Wpf.AvalonDock/Properties/Resources.resx
@@ -139,7 +139,7 @@
     <value>Float</value>
   </data>
   <data name="Anchorable_Hide" xml:space="preserve">
-    <value>Close</value>
+    <value>Hide</value>
   </data>
   <data name="Document_Close" xml:space="preserve">
     <value>Close</value>
